# canvas

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp  requirements.txt
.github/workflows/: actions.yml  cmake.yml
cmake_modules/: .README.swp  md
src/: App.cpp  App.hpp  GUI.cpp  GUI.hpp  PortAudioBackend.cpp  PortAudioBackend.hpp  RingBuffer.cpp  RingBuffer.hpp  Synth.cpp  Synth.hpp  audio.cpp  audio.hpp  common.cpp  common.hpp  draw.cpp  draw.hpp  filters.cpp  filters.hpp  io.cpp  io.hpp  main.cpp  portaudio_backend.cpp  portaudio_backend.hpp  sine_table_2048.txt
src/benchmark/: benchmark.cpp
tests/: conftest.py  test_canvas.py
tools/: generate_sine_table.py
